# agent-tester

./: .env.example  .gitignore  CONTRIBUTING.md  DOCUMENTATION.md  IMPLEMENTATION_COMPLETE.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  TRANSFORMATION_SUMMARY.md  agent_tests.yaml  pyproject.toml  requirements.txt  test_agent_framework.py
agent_tester/: README.md  __init__.py  cli.py  models.py  suite.py
agent_tester/adapters/: __init__.py  azure_adapter.py  openai_adapter.py
agent_tester/validators/: __init__.py  memory_validator.py  task_validator.py  trajectory_validator.py
examples/: README.md  create_comprehensive_tests.py  example_azure_agent.py  example_test_openai_agent.py  openai_example.py  setup_azure_testing.py  simple_example.py
tests/: test_agent_framework_integration.py  test_azure_ai_agents.py  test_azure_simple.py  test_real_agents.py
